<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item 
        android:id="@+id/menuSearch"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView">
    </item>

    <item
      android:id="@+id/menuTheater"
      android:title="@string/title_theaters"
      android:icon="@drawable/ic_action_theater"
      app:showAsAction="ifRoom|collapseActionView">
    </item>

    <item
      android:id="@+id/menuDvd"
      android:title="@string/title_dvds"
      android:icon="@drawable/ic_action_dvd"
      app:showAsAction="ifRoom|collapseActionView">
    </item>
</menu>